--- a/player/build.gradle
+++ b/player/build.gradle
@@ -1,12 +1,12 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.streye.app.myplayer"
-        minSdkVersion 21
+//        applicationId "com.streye.app.myplayer"
+        minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
